<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/main_menu"
            android:title="Home" />
        <item
            android:id="@+id/nutritionFacts"
            android:icon="@drawable/nutrition_facts"
            android:title="Nutrition Facts" />

        <item
            android:id="@+id/nutritionReplacement"
            android:icon="@drawable/nutrition_replacement"
            android:title="Food Replacements" />

        <item
            android:id="@+id/overcomeUndernutrition"
            android:icon="@drawable/overcome_undernutrition"
            android:title="Essential Micronutrients" />

        <item
            android:id="@+id/planting"
            android:icon="@drawable/grow_your_own"
            android:title="Grow Your Vegetables" />

        <item
            android:id="@+id/nutritionQuiz"
            android:icon="@drawable/nutrition_quiz"
            android:title="Healthy Eating Quiz" />
        <item
            android:id="@+id/nearbyMarket"
            android:icon="@drawable/nearby_market"
            android:title="Nearby Fresh Markets" />
        <item
            android:id="@+id/communityGargen"
            android:icon="@drawable/community_garden"
            android:title="Nearby Community Gardens" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/about_us"
            android:title="About SmartEating" />
    </group>

</menu>