...
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vitamin_c_click" />


        <ImageView
            android:id="@+id/vitamin_b1_click"
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="12dp"
            android:adjustViewBounds="true"
            android:background="@drawable/vitamin_b1"
...
