...
            android:paddingLeft="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beef_click" />


        <EditText
            android:id="@+id/et_title"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_style"
            android:ems="10"
...
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_enter" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="85dp"
            android:layout_height="45dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/layout_button"
            android:text="search"
...
